<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sv.animalchomper.MainActivity">

    <ImageButton
        android:id="@+id/mouseBTN"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignRight="@+id/editText"
        android:layout_below="@+id/editText"
        android:layout_marginTop="14dp"
        android:background="@drawable/mouse" />

    <ImageButton
        android:id="@+id/catBTN"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignLeft="@+id/mouseBTN"
        android:layout_alignStart="@+id/mouseBTN"
        android:layout_below="@+id/mouseBTN"
        android:layout_marginTop="25dp"
        android:background="@drawable/cat" />

    <ImageButton
        android:id="@+id/elephantBTN"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignLeft="@+id/catBTN"
        android:layout_alignStart="@+id/catBTN"
        android:layout_below="@+id/catBTN"
        android:layout_marginTop="25dp"
        android:background="@drawable/elephant" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="45dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/choose_a_animal"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:fontFamily="sans-serif"
        android:text="@string/computer"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="26dp"
        android:layout_above="@+id/catBTN"
        android:layout_alignLeft="@+id/cpuChoice"
        android:layout_alignStart="@+id/cpuChoice" />

    <ImageView
        android:id="@+id/cpuChoice"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignTop="@+id/catBTN"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/result" />

            <TextView
                android:id="@+id/resultTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/result" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/cpuWins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/cpuChoice"
                android:fontFamily="sans-serif"
                android:text="@string/cpu" />

            <TextView
                android:id="@+id/cpuWinsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/win" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/playerWins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/player" />

            <TextView
                android:id="@+id/playerWinsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/win" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/round"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/round" />

            <TextView
                android:id="@+id/roundTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
